--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "angular-bootstrap-md": "^6.0.2",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "mongoose": "^4.13.1",
     "morgan": "^1.9.0",
     "rxjs": "^5.5.2",
+    "rxjs-compat": "^6.1.0",
     "serve-favicon": "^2.4.5",
     "zone.js": "^0.8.14"
   },
