--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hammerjs": "^2.0.8",
     "mongoose": "^4.13.1",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.4",
     "rxjs": "^5.5.2",
     "rxjs-compat": "^6.1.0",
     "serve-favicon": "^2.4.5",
